# MCP-Resume-Tailor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  master.template.json  pyproject.toml  requirements.txt  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: app.js  index.html  styles.css
tests/: test_tools.py
