[project]
name = "resume-tailor-mcp"
version = "0.1.0"
description = "MCP server that helps an AI client tailor a CV to a job: persistent master resume, deterministic ATS gap check, and ATS-safe PDF/DOCX export."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nmaa Hawary" }]
keywords = ["mcp", "resume", "cv", "ats", "claude"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1",
    "reportlab>=4.0",
]

[project.scripts]
resume-tailor-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
