[project]
name = "resume-tailor-mcp"
version = "0.1.0"
description = "MCP server that helps an AI client tailor a CV to a job: persistent master resume, deterministic ATS gap check, and ATS-safe PDF/DOCX export."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nmaa Hawary" }]
keywords = ["mcp", "resume", "cv", "ats", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1",
    "reportlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/NmaaAlhawary/MCP-Resume-Tailor"
Repository = "https://github.com/NmaaAlhawary/MCP-Resume-Tailor"
Issues = "https://github.com/NmaaAlhawary/MCP-Resume-Tailor/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
resume-tailor-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
